First member included

--- a/pgmlab_template/_config.yml
+++ b/pgmlab_template/_config.yml
@@ -45,7 +45,7 @@ links:
   - title: Consultancy
     url: /publications
   - title: People
-    url: /talks
+    url: /people
   - title: Contact
     url: /talks
 
